; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/test/esp32/extr_test_freertos_task_delay_until.c_delaying_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/test/esp32/extr_test_freertos_task_delay_until.c_delaying_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NO_OF_CYCLES = common dso_local global i32 0, align 4
@TICKS_TO_DELAY = common dso_local global i32 0, align 4
@IDEAL_DELAY_PERIOD_MS = common dso_local global i32 0, align 4
@TICK_PERIOD_US = common dso_local global i32 0, align 4
@IDEAL_DELAY_PERIOD_US = common dso_local global i32 0, align 4
@task_delete_semphr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @delaying_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @delaying_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = call i32 @vTaskDelay(i32 1)
  %9 = call i64 (...) @xTaskGetTickCount()
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  store i64 %10, i64* %6, align 8
  %11 = call i64 (...) @ref_clock_get()
  store i64 %11, i64* %3, align 8
  store i32 0, i32* %7, align 4
  br label %12

12:                                               ; preds = %35, %1
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @NO_OF_CYCLES, align 4
  %15 = icmp slt i32 %13, %14
  br i1 %15, label %16, label %38

16:                                               ; preds = %12
  %17 = load i32, i32* @TICKS_TO_DELAY, align 4
  %18 = call i32 @vTaskDelayUntil(i64* %5, i32 %17)
  %19 = load i32, i32* @IDEAL_DELAY_PERIOD_MS, align 4
  %20 = call i64 (...) @xTaskGetTickCount()
  %21 = load i64, i64* %6, align 8
  %22 = sub nsw i64 %20, %21
  %23 = call i32 @TICKS_TO_MS(i64 %22)
  %24 = call i32 @TEST_ASSERT_EQUAL(i32 %19, i32 %23)
  %25 = call i64 (...) @ref_clock_get()
  store i64 %25, i64* %4, align 8
  %26 = load i32, i32* @TICK_PERIOD_US, align 4
  %27 = load i32, i32* @IDEAL_DELAY_PERIOD_US, align 4
  %28 = load i64, i64* %4, align 8
  %29 = load i64, i64* %3, align 8
  %30 = sub nsw i64 %28, %29
  %31 = trunc i64 %30 to i32
  %32 = call i32 @TEST_ASSERT_UINT32_WITHIN(i32 %26, i32 %27, i32 %31)
  %33 = load i64, i64* %4, align 8
  store i64 %33, i64* %3, align 8
  %34 = load i64, i64* %5, align 8
  store i64 %34, i64* %6, align 8
  br label %35

35:                                               ; preds = %16
  %36 = load i32, i32* %7, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %7, align 4
  br label %12

38:                                               ; preds = %12
  %39 = load i32, i32* @task_delete_semphr, align 4
  %40 = call i32 @xSemaphoreGive(i32 %39)
  %41 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i64 @xTaskGetTickCount(...) #1

declare dso_local i64 @ref_clock_get(...) #1

declare dso_local i32 @vTaskDelayUntil(i64*, i32) #1

declare dso_local i32 @TEST_ASSERT_EQUAL(i32, i32) #1

declare dso_local i32 @TICKS_TO_MS(i64) #1

declare dso_local i32 @TEST_ASSERT_UINT32_WITHIN(i32, i32, i32) #1

declare dso_local i32 @xSemaphoreGive(i32) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
